<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ferra Food</string>

    <string name="pref_language">prefs_language</string>
    <string name="pref_uid">prefs_uid</string>
    <string name="lang_key">langa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="previous">Back</string>
    <string name="next">Next</string>

    <string name="retry">إعادة المحاولة</string>
    <string name="network_error">مشكلة في الشبكة</string>

    <string name="internet_not_available">الإنترنت غير متصل , تاكد من توفر خدمة الانترنت وحأول مره اخري</string>
    <string name="start">Start</string>
    <string name="header">Header</string>
    <string name="toLogin">Welcome, login with </string>
    <string name="email_number">Email / Number</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="company_organization_university">Company / Organization / University</string>
    <string name="number">Number</string>
    <string name="title">Title</string>
    <string name="search_event">Search event</string>
    <string name="please_enter">"Please enter "</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="active">Active now</string>
    <string name="event_name">Event name</string>
    <string name="featured_this_week">Featured this week</string>
    <string name="khartoum_sudan">Khartoum, Sudan</string>
    <string name="about_event">BeSudan came to birth, to support and encourage the creatives of Sudan to up their game to an international level, and to offer them a chance to showcase their work, art and talents to the market around them, to their colleagues and others. It is a great opportunity for them to build a professional network and get a constructive feedback on their work.</string>
    <string name="participants">Participants:</string>
    <string name="more">More</string>
    <string name="sponsors">Sponsors:</string>
    <string name="get_tickets">Get tickets</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="_100_000">100,000</string>
    <string name="_50">50</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="scan_card">Scan card</string>
    <string name="or">Or</string>
    <string name="card_number">Card number</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="cvv">CVV</string>
    <string name="save_credit_card_information">Save credit card information</string>
    <string name="pay">Pay</string>
    <string name="besudan_2021">BeSudan 2021</string>
    <string name="_22_oct_2021_04_00_pm_11_30_pm" tools:ignore="TypographyDashes">22, Oct 2021 - 04:00 PM - 11:30 PM</string>
    <string name="first_last_name">First last name</string>
    <string name="graphic_designer">Graphic designer</string>
    <string name="name_gmail_com">name@gmail.com</string>
    <string name="_2499xxxxxxxxx">+2499XXXXXXXXX</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="job_description">Job description</string>
    <string name="xxxxxxxx">xxxxxx</string>
    <string name="xxxx_mail_com">xxxx@mail.com</string>
    <string name="xxxxxxxxxxxxxxxxxx">xxxxxxxxxxxxxxxxxx</string>
    <string name="art_design_creative_tech_food_health">Art,Design,Creative,Tech,Food,Health</string>
    <string name="interests">Interests</string>
    <string name="languages">Languages</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="speaker">Speaker</string>
    <string name="vote">Vote</string>
    <string name="search_by_name">Search by name ...</string>
    <string name="menu">Menu</string>
    <string name="order">Orders</string>
    <string name="tools">Tools</string>
    <string name="do_you_have_an_account">Do you have an account</string>
    <string name="phone_number">Phone number</string>
    <string name="verification">Verification</string>
    <string name="popular_categories">Popular categories</string>
    <string name="best_deals">Best deals</string>
    <string name="success">Successfully</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="btn_send_otp">Send otp</string>
    <string name="_2_30">2:30</string>
    <string name="use_your_phone_to_login">Use your phone to login</string>
    <string name="use_your_email_to_login">Use your email to login</string>
    <string name="app_toolbar_transition">app_toolbar_transition</string>
    <string name="zero_number">0</string>
    <string name="foods">Foods</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="splash">Splash</string>
    <string name="details">Details</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="one">1</string>
    <string name="description">Description</string>
    <string name="show_comment">Show comment</string>
    <string name="sign_dollar">$</string>
    <string name="one_thousnd">1,000</string>
    <string name="food_name">Food name</string>
    <string name="food_rating">Food rating</string>
    <string name="please_write_your_comment">Please write your comment</string>
    <string name="your_comment">Your comment</string>
    <string name="submit">Submit</string>
    <string name="left_bracket_with_plus_sign">(+</string>
    <string name="right_bracket_with_dollar_sign">$)</string>
    <string name="_561234567">561234567</string>
    <string name="size">Size</string>
    <string name="addon">Addon</string>
    <string name="large">Large</string>
    <string name="pref_addon">pref_addon</string>
    <string name="pref_size">pref_size</string>
    <string name="pref_first_time">pref_first_time</string>
    <string name="pref_access_token">pref_access_token</string>
    <string name="pref_refresh_token">pref_refresh_token</string>
    <string name="pref_device_id">pref_device_id</string>
    <string name="confirm">Confirm</string>
    <string name="search_for_your_location">Search for your location</string>
    <string name="address_from_map">Address from map</string>
    <string name="edit">edit</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="street">Street</string>
    <string name="shipping_address_details">Shipping address details</string>
    <string name="shipping_address_details_hint">Building no.</string>
    <string name="phone_number_label">Phone number</string>
    <string name="full_name_label">Full name</string>
    <string name="service_not_available">لا يوجد اتصال</string>
    <string name="invalid_lat_long_used">مشكلة في العنوان</string>
    <string name="no_address_found">لم يتم العثور علي عنوان</string>
    <string name="address_found">تم العثور علي العنوان</string>
    <string name="my_location">My location</string>
    <string name="pref_user">pref_user</string>
    <string name="proceed_to_check_out">Proceed to check out</string>
    <string name="total_price">Total price</string>
    <string name="_5_00">5.00</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">You didn\'t add to the cart, continue the shopping journey and add what you want</string>
    <string name="shop_now">Shop now</string>
    <string name="no">No</string>
    <string name="basic_information">Basic information</string>
    <string name="your_name">Your name</string>
    <string name="_966512345678">+966512345678</string>
    <string name="information_information_com">information@information.com</string>
    <string name="sign_out">Sign out</string>
    <string name="pref_lat_lang">pref_lat_lang</string>
    <string name="choose_your_location">choose your location</string>
    <string name="address_details">Address details</string>
    <string name="set_timer">00:00</string>
    <string name="building_no">Building no.</string>
    <string name="pref_address">pref_address</string>
    <string name="braintree">Braintree</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="payment_method">Payment method</string>

</resources>