<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_1x"
    android:layout_marginTop="@dimen/margin_1x"
    android:layout_marginBottom="@dimen/margin_1x"
    android:layout_marginEnd="@dimen/margin_1x"
    android:elevation="@dimen/zero_dp"
    app:cardCornerRadius="@dimen/sixteen_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_background"
        android:paddingBottom="@dimen/sixteen_dp">

        <ImageView
            android:id="@+id/cart_food_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="@dimen/margin_1x"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/cart_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_1x"
            android:text="@string/food_name"
            android:textColor="@color/gold_300"
            app:layout_constraintStart_toEndOf="@+id/cart_food_image"
            app:layout_constraintTop_toTopOf="@+id/cart_food_image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1x"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/sign_dollar"
            android:textColor="@color/gold_400"
            android:textSize="@dimen/twentyFour_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cart_food_image"
            app:layout_constraintTop_toBottomOf="@+id/cart_food_name" />

        <TextView
            android:id="@+id/cart_food_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_end_small_x"
            android:text="5.00"
            android:textColor="@color/grayColorLite"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/number_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/cart_food_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_food_image">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_minus_cart"
                style="@style/GradientPlusMinusButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/margin_1x"
                android:background="@drawable/rounded_plus_minus_button"
                android:gravity="center"
                android:text="@string/minus_sign"
                android:textColor="@color/grayColorLite"
                android:textSize="@dimen/twenty_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_current_value_cart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/margin_1x"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_minus_cart"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_plus_cart"
                style="@style/GradientPlusMinusButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/margin_1x"
                android:background="@drawable/rounded_plus_minus_button"
                android:gravity="center"
                android:shadowColor="@color/grayColorLite"
                android:text="@string/plus_sign"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_current_value_cart"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>